# saitik1

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: django.yml
api/: apps.py  serializers.py  urls.py  views.py
root/: settings.py  urls.py
shop/: admin.py  apps.py  mixins.py  models.py  urls.py  utils.py  views.py
shop/migrations/: 0001_initial.py  0002_add_example_data.py
templates/: base.html  categories_list.html  category.html  product.html  products_list.html
